[tool.poetry]
name = "pytest_proj"
version = "0.1.0"
description = ""
authors = ["Evgeniy Semenov <02logos12@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
pytest-cov = "^4.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
